Fix recursive backButton on ios. Remove menu button safearea

--- a/src/app/[shortCode]/_components/overlay/Info.module.css
+++ b/src/app/[shortCode]/_components/overlay/Info.module.css
@@ -22,3 +22,7 @@
 .workInfo {
   flex-grow: 1;
 }
+
+.menuButton {
+  margin-left: 12px;
+}
