--- a/src/app/[shortCode]/_components/overlay/MenuButton.module.css
+++ b/src/app/[shortCode]/_components/overlay/MenuButton.module.css
@@ -1,4 +1,3 @@
 .galleryButton {
-  margin-left: 12px;
   pointer-events: auto;
 }
